# Weatherapp

./: .gitignore  Dockerfile  entrypoint.sh  main.py  manage.py  models.py  pyproject.toml  requirements.txt
app/: conftest.py  main.py  models.py  tests.py
app/templates/: login.html  main_page.html  register.html
app/utils/: auth.py  city_to_coord.py
templates/: main_page.html
utils/: city_to_coord.py  weather_api.py
