[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = ""
authors = ["Ivan <ivan4dante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests-async = "^0.6.2"
flask = {extras = ["async"], version = "^3.0.3"}
peewee = "^3.17.6"
peewee-aio = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
